# X

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  go.mod
deployments/docker/: Dockerfile
scripts/: setup.sh
src/: lib.rs  main.rs
src/application/: commands.rs  handlers.rs  mod.rs  queries.rs  use_cases.rs
src/domain/: aggregates.rs  entities.rs  errors.rs  events.rs  mod.rs
src/infrastructure/: auth.rs  cache.rs  database.rs  email.rs  mod.rs  queue.rs  search.rs  storage.rs
src/interfaces/: cli.rs  http.rs  mod.rs  websocket.rs
src/shared/: config.rs  constants.rs  crypto.rs  logger.rs  mod.rs  validator.rs
